--- a/local-development/docker-compose.yml
+++ b/local-development/docker-compose.yml
@@ -24,13 +24,15 @@ services:
       AMBAR_HTTP_PASSWORD: "password"
       SMTP_HOST: "172.97.0.213"
       SMTP_PORT: "1025"
-      SMTP_USERNAME: ""
-      SMTP_PASSWORD: ""
+      SMTP_USERNAME: "smtp_username"
+      SMTP_PASSWORD: "smtp_password"
       SMTP_FROM_EMAIL_FOR_ADMINISTRATORS: "from-email-for-administrators@localhost"
     depends_on:
       event-sourcing-event-store:
         condition: service_healthy
       event-sourcing-projection-store:
+        condition: service_healthy
+      event-sourcing-email-server:
         condition: service_healthy
     healthcheck:
       test: ["CMD-SHELL", "wget --spider --server-response --timeout=5 http://localhost:8080/docker_healthcheck 2>&1 | grep 'HTTP/1.1 200'"]
@@ -189,9 +191,17 @@ services:
       - "8082:8082"
 
   event-sourcing-email-server:
-    image: mailhog/mailhog:v1.0.1
+    image: docker.io/maildev/maildev:latest
     container_name: event-sourcing-email-server
     restart: always
+    environment:
+      - MAILDEV_SMTP_PORT=1025
+      - MAILDEV_WEB_PORT=8025
+      - MAILDEV_MAIL_DIRECTORY=/data
+      - MAILDEV_INCOMING_USER=smtp_username
+      - MAILDEV_INCOMING_PASS=smtp_password
+    volumes:
+      - ./data/event-sourcing-email-server:/data
     healthcheck:
       test: [ "CMD", "wget", "--spider", "--quiet", "http://localhost:8025" ]
       timeout: 2s
@@ -201,8 +211,10 @@ services:
     networks:
       event-sourcing:
         ipv4_address: 172.97.0.213
+    expose:
+      - 1025  # Internal SMTP
     ports:
-      - "8083:8025"
+      - "8083:8025"  # External Web UI access
 
 
 networks:
